--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     en Enboga Bar de Rafa Brandez.</p>
 
 
-                <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleInterval" class="carousel slide rice" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="6000">
                             <p>
