--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -28,7 +28,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="aqui" class="nav-link" 
+                                    <a id="aqui" class="nav-link active" 
                                         href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
