--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" >
+                        <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a id="up" class="nav-link active white" aria-current="page"
