firs creation of aboutus/page

--- a/index.html
+++ b/index.html
@@ -116,19 +116,21 @@
 
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mt-4 text-center">
+                <hr class="mt-4">
                 <h3>MENU DIARIO</h3>
                 <p class="lead">De martes a viernes, un menú del día para disfrutar de toda la calidad con tres
                     entrantes, un
                     principal y un postre. Ven a disfrutar del mejor producto con la mejor calidad.</p>
                 <a href="./pages/menu.html" class="btn btn-dark active border border-dark" role="button">MENU
                     DIARIO</a>
+                    <hr class="mt-5">
                 <h3 class="mt-5">DESCUBRE NUESTROS ARROCES</h3>
                 <p class="lead">Porque si algo nos define es la calidad de nuestros arroces. ¿Quién no sueña con una
                     paella de unos milímetros, con todo su sabor y el punto justo de socarrat? Un acierto seguro
                     en Enboga Bar de Rafa Brandez.</p>
 
 
-                <div id="carouselExampleInterval" class="carousel slide rice" data-bs-ride="carousel">
+                <div id="carouselExampleInterval" class="carousel slide rice mt-5" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="6000">
                             <p>
@@ -158,6 +160,7 @@
 
 
                 <div>
+                    <hr class="mt-5">
                     <h3 class="mt-5">DE LA COCINA A TU CASA</h1>
                         <p class="lead">
                             Imáginate recibir una paella en casa sin moverte en una caja. Deja de imaginártelo y ¡haz tu
@@ -166,6 +169,8 @@
 
                         <a href="./pages/athome.html" class="btn btn-dark active  border border-dark" role="button">A
                             DOMICILIO</a>
+                            <br><br>
+                            <hr class="mt-5">
 
                 </div>
 
