--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +13,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
+    <!-- Navbar -->
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid" id="bcg">
-                        <a class="navbar-brand" href="#">Navbar</a>
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg ">
+                    <div class="container-fluid" id="navbar">
+                        <a class="navbar-brand" href="#"><img src="../img/Logo-rafa-brandez.png" width="100px"
+                                alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -28,33 +33,182 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="aqui" class="nav-link active" 
-                                        href="../index.html">HOME</a>
+                                    <a id="up" class="nav-link white" 
+                                        href="./index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./aboutus.html">SOBRE NOSOTROS</a>
+                                    <a class="nav-link active white" aria-current="page" href="./aboutus.html">SOBRE NOSOTROS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./menu.html">CARTA</a>
+                                    <a class="nav-link white" href="./menu.html">CARTA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./athome.html">A DOMICILIO</a>
+                                    <a class="nav-link white" href="./athome.html">A DOMICILIO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./contact.html">CONTACTO</a>
+                                    <a class="nav-link white" href="./contact.html">CONTACTO</a>
                                 </li>
 
                             </ul>
+
+
                         </div>
                     </div>
                 </nav>
             </div>
-            <div class="col-2">
-                <a href="#aqui" class="btn btn-success active mt-2 border border-success" role="button" data-bs-toggle="button"
-                    aria-pressed="true">RESERVAR</a>
+            <div class="col-12">
+                <hr>
             </div>
+
         </div>
     </div>
-    <script src="./javascript/reservar.js"></script>
+    <!-- Carousel -->
+    <div class="container mt-5">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img src="./img/galeria-11.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-12.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-21.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-35.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-25.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="./img/galeria-29.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <!-- Information -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mt-4 text-center">
+                <h1 class="">VEN A COMER CON NOSOTROS</h1>
+                <p class="lead">
+                    Ven a descubrir arroces excepcionales sin salir de Valencia y producto de cercanía y calidad en
+                    Enboga-Bar. Rafa Brandez te recibe con los brazos abiertos en su cocina para disfrutar de
+                    gastronomía valenciana con cariño.
+                </p>
+
+                <a href="./pages/aboutus.html" class="btn btn-dark active  border border-dark" role="button">SOBRE
+                    NOSOTROS</a>
+
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mt-4 text-center">
+                <hr class="mt-4">
+                <h3>MENU DIARIO</h3>
+                <p class="lead">De martes a viernes, un menú del día para disfrutar de toda la calidad con tres
+                    entrantes, un
+                    principal y un postre. Ven a disfrutar del mejor producto con la mejor calidad.</p>
+                <a href="./pages/menu.html" class="btn btn-dark active border border-dark" role="button">MENU
+                    DIARIO</a>
+                    <hr class="mt-5">
+                <h3 class="mt-5">DESCUBRE NUESTROS ARROCES</h3>
+                <p class="lead">Porque si algo nos define es la calidad de nuestros arroces. ¿Quién no sueña con una
+                    paella de unos milímetros, con todo su sabor y el punto justo de socarrat? Un acierto seguro
+                    en Enboga Bar de Rafa Brandez.</p>
+
+
+                <div id="carouselExampleInterval" class="carousel slide rice mt-5" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="6000">
+                            <p>
+                                He venido con mi padres a comer y hemos quedado encantados. Atención de 10 y arroces
+                                de 1000!
+                            </p>
+                            <p class="bcgp">Rubén- GOOGLE REVIEWS</p>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="6000">
+                            <p>
+                                Hacía tiempo que no comíamos algo tan exquisito. Volveré sin pensarlo en
+                                cuanto pueda, que pasada!
+                            </p>
+                            <p class="bcgp">Almudena- VALENCIA</p>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="6000">
+                            <p>
+                                Mi pareja y yo vinimos a pasar unos dias a Valencia, y sin saber cómo, terminamos
+                                comiendo en Enboga-Bar. Ese mismo día cenamos otra vez allí!
+
+                            </p>
+                            <p class="bcgp">Sara-BARCELONA</p>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div>
+                    <hr class="mt-5">
+                    <h3 class="mt-5">DE LA COCINA A TU CASA</h1>
+                        <p class="lead">
+                            Imáginate recibir una paella en casa sin moverte en una caja. Deja de imaginártelo y ¡haz tu
+                            pedido! Todos los arroces de nuestra carta disponibles para disfrutar a domicilio.
+                        </p>
+
+                        <a href="./pages/athome.html" class="btn btn-dark active  border border-dark" role="button">A
+                            DOMICILIO</a>
+                            <br><br>
+                            <hr class="mt-5">
+
+                </div>
+
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <div class="mt-5">
+                    <img class="img-fluid" src="./img/menu-diario.jpg">
+                </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div>
+                        <h3 class="mt-5">VEN A VERNOS</h1>
+                            <p class="lead">
+                                Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en nuestra
+                                web. ¡Te esperamos!
+                            </p>
+    
+                            <a href="./contact.html" class="btn btn-dark active  border border-dark"
+                                role="button">CONTACTO</a>
+                                <a href="#up" class="btn btn-light active ms-5 "
+                                role="button">Volver al inicio</a>
+                            <div>
+                                <img src="../img/Logo-rafa-brandez.png" width="300px">
+                                
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    </div>
+    <script src="../javascript/reservar.js"></script>
 </body>
+
 </html>
