solution menu-bugs

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -62,7 +62,7 @@
 
         </div>
     </div>
-
+    <!-- Menu -->
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -72,11 +72,11 @@
         
         <div class="container d-flex justify-content-center align-items-center ">
             <div class="row">
-                <!-- columna izquierda -->
+                <!-- col-left -->
                 <div class="col-12 col-lg-9">
                     <div class="row">
                         <div class="col-12 col-lg-8 p-2">
-                            <article class="card h-100 bg-success">
+                            <article class="card h-100 bac-card">
                                 <div class="card-body">
                                     <div class="ps-3">
                                         <h6 class="m-0 mt-2 h6 title">ENTRANTES</h6>
@@ -112,7 +112,7 @@
                             </article>
                         </div>
                         <div class="col-12 col-lg-4 p-2">
-                            <article class="card h-100 bg-primary">
+                            <article class="card h-100 bac-card">
                                 <div class="card-body">
                                     <div class="ps-3">
                                         <h6 class="m-0 mt-2 h6 title">CARNES Y PESCADOS</h6>                                        
@@ -147,7 +147,7 @@
                             </article>
                         </div>
                         <div class="col-12 col-lg-4 p-2">
-                            <article class="card h-100 bg-warning">
+                            <article class="card h-100 bac-card">
                                 <div class="card-body">
                                     <div class="ps-3">
                                         <h6 class="m-0 mt-2 h6 title">POSTRES</h6>
@@ -179,7 +179,7 @@
                             </article>
                         </div>
                         <div class="col-12 col-lg-8 p-2">
-                            <article class="card h-100 bg-danger">
+                            <article class="card h-100 bac-card">
                                 <div class="card-body">
                                     <div class="ps-3">
                                         <h6 class="m-0 mt-2 h6 title">VINOS DE LA TERRETA</h6>                                        
@@ -212,9 +212,9 @@
                     </div>
                 </div>
 
-                <!-- columna derecha -->
+                <!-- col-right -->
                 <div class="col-12 col-lg-3 p-2">
-                    <article class="card h-100 bg-secondary">
+                    <article class="card h-100 bac-card">
                         <div class="card-body">
                             <div class="ps-3">
                                 <h6 class="m-0 mt-2 h6 title">ARROCES</h6>
