--- a/pages/athome.html
+++ b/pages/athome.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +13,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
+    <!-- Navbar -->
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid" id="bcg">
-                        <a class="navbar-brand" href="#">Navbar</a>
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg ">
+                    <div class="container-fluid" id="navbar">
+                        <a class="navbar-brand" href="#"><img src="../img/Logo-rafa-brandez.png" width="100px"
+                                alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -28,33 +33,105 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="aqui" class="nav-link"
-                                        href="../index.html">HOME</a>
+                                    <a id="up" class="nav-link white" href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./aboutus.html">SOBRE NOSOTROS</a>
+                                    <a class="nav-link white" href="./aboutus.html">SOBRE
+                                        NOSOTROS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./menu.html">CARTA</a>
+                                    <a class="nav-link white" href="./menu.html">CARTA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active"  aria-current="page" href="./athome.html">A DOMICILIO</a>
+                                    <a class="nav-link active white" aria-current="page" href="./athome.html">A
+                                        DOMICILIO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./contact.html">CONTACTO</a>
+                                    <a class="nav-link white" href="./contact.html">CONTACTO</a>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
                 </nav>
             </div>
-            <div class="col-2">
-                <a href="#aqui" class="btn btn-success active mt-2 border border-success" role="button" data-bs-toggle="button"
-                    aria-pressed="true">RESERVAR</a>
+            <div class="col-12">
+                <hr>
             </div>
         </div>
     </div>
-    <script src="./javascript/reservar.js"></script>
+
+    <!-- Information -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mt-4 text-center">
+                <h1 class="">DESDE EL SOFÁ...</h1>
+                <p class="lead">
+                    Ahora también puedes disfrutar de tus platos favoritos directamente en casa, sin intermediarios y al
+                    mejor precio. Haz tu pedido online y te lo mandamos a casa.
+                    Rellena el formulario y disfruta de uno de nuestros mejores arroces sin moverte de casa (5 personas)!
+                </p>
+                <br>
+                <form class="row gy-2 gx-3 align-items-center">
+                    <div class="col-auto">
+                      <label class="visually-hidden" for="autoSizingInput">Name</label>
+                      <input type="text" class="form-control" id="autoSizingInput" placeholder="c/ Piruleta-24-9">
+                    </div>
+                    <div class="col-auto">
+                      <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+                      <div class="input-group">
+                        <div class="input-group-text">TLF</div>
+                        <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="663221456">
+                      </div>
+                    </div>
+                    <div class="col-auto">
+                      <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+                      <select class="form-select" id="autoSizingSelect">
+                        <option selected>Selecciona tu arroz</option>
+                        <option value="1">Paella vaenciana</option>
+                        <option value="2">Arroz de verduras</option>
+                        <option value="3">Paella señoret</option>
+                        <option value="4">Paella de marisco</option>
+                        <option value="5">Paella de bogavante</option>
+                        <option value="6">Fideua</option>
+                        <option value="7">Arroz negro</option>
+                      </select>
+                    </div>
+                    
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary">Pedir y pagar</button>
+                    </div>
+                  </form>
+
+
+
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="container">
+            <div class="row">
+                <hr class="mt-5">
+                <div class="col-12 text-center">
+                    <div>
+                        <h3 class="mt-5">VEN A VERNOS</h1>
+                            <p class="lead">
+                                Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en
+                                nuestra
+                                web. ¡Te esperamos!
+                            </p>
+
+                            <a href="./contact.html" class="btn btn-dark active  border border-dark"
+                                role="button">CONTACTO</a>
+                            <a href="#up" class="btn btn-light active ms-5 " role="button">Volver al inicio</a>
+                            <div>
+                                <img src="../img/Logo-rafa-brandez.png" width="300px">
+
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </body>
+
 </html>
