image added athome

--- a/pages/athome.html
+++ b/pages/athome.html
@@ -68,69 +68,80 @@
                 <p class="lead">
                     Ahora también puedes disfrutar de tus platos favoritos directamente en casa, sin intermediarios y al
                     mejor precio. Haz tu pedido online y te lo mandamos a casa.
-                    Rellena el formulario y disfruta de uno de nuestros mejores arroces sin moverte de casa (5 personas)!
+                    Rellena el formulario y disfruta de uno de nuestros mejores arroces sin moverte de casa (5
+                    personas)!
                 </p>
                 <br>
+                <!-- Form -->
                 <form class="row gy-2 gx-3 align-items-center">
                     <div class="col-auto">
-                      <label class="visually-hidden" for="autoSizingInput">Name</label>
-                      <input type="text" class="form-control" id="autoSizingInput" placeholder="c/ Piruleta-24-9">
+                        <label class="visually-hidden" for="autoSizingInput">Name</label>
+                        <input type="text" class="form-control" id="autoSizingInput" placeholder="c/ Piruleta-24-9">
                     </div>
                     <div class="col-auto">
-                      <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
-                      <div class="input-group">
-                        <div class="input-group-text">TLF</div>
-                        <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="663221456">
-                      </div>
+                        <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+                        <div class="input-group">
+                            <div class="input-group-text">TLF</div>
+                            <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="663221456">
+                        </div>
                     </div>
                     <div class="col-auto">
-                      <label class="visually-hidden" for="autoSizingSelect">Preference</label>
-                      <select class="form-select" id="autoSizingSelect">
-                        <option selected>Selecciona tu arroz</option>
-                        <option value="1">Paella vaenciana</option>
-                        <option value="2">Arroz de verduras</option>
-                        <option value="3">Paella señoret</option>
-                        <option value="4">Paella de marisco</option>
-                        <option value="5">Paella de bogavante</option>
-                        <option value="6">Fideua</option>
-                        <option value="7">Arroz negro</option>
-                      </select>
+                        <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+                        <select class="form-select" id="autoSizingSelect">
+                            <option selected>Selecciona tu arroz</option>
+                            <option value="1">Paella vaenciana</option>
+                            <option value="2">Arroz de verduras</option>
+                            <option value="3">Paella señoret</option>
+                            <option value="4">Paella de marisco</option>
+                            <option value="5">Paella de bogavante</option>
+                            <option value="6">Fideua</option>
+                            <option value="7">Arroz negro</option>
+                        </select>
                     </div>
-                    
+
                     <div class="col-auto">
-                      <button type="submit" class="btn btn-primary">Pedir y pagar</button>
+                        <button type="submit" class="btn btn-primary">Pedir y pagar</button>
                     </div>
-                  </form>
+                </form>
 
 
 
             </div>
         </div>
+    </div>
 
-        <!-- Footer -->
-        <div class="container">
-            <div class="row">
-                <hr class="mt-5">
-                <div class="col-12 text-center">
-                    <div>
-                        <h3 class="mt-5">VEN A VERNOS</h1>
-                            <p class="lead">
-                                Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en
-                                nuestra
-                                web. ¡Te esperamos!
-                            </p>
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Img -->
+            <div class="col-12">
+                <div class="d-flex justify-content-center">
+                    <img class="img-fluid" src="../img/a-domicilio.jpg">
+                </div>
+            </div>
+    <!-- Footer -->
+    <div class="container">
+        <div class="row">
+            <hr class="mt-5">
+            <div class="col-12 text-center">
+                <div>
+                    <h3 class="mt-5">VEN A VERNOS</h1>
+                        <p class="lead">
+                            Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en
+                            nuestra
+                            web. ¡Te esperamos!
+                        </p>
 
-                            <a href="./contact.html" class="btn btn-dark active  border border-dark"
-                                role="button">CONTACTO</a>
-                            <a href="#up" class="btn btn-light active ms-5 " role="button">Volver al inicio</a>
-                            <div>
-                                <img src="../img/Logo-rafa-brandez.png" width="300px">
+                        <a href="./contact.html" class="btn btn-dark active  border border-dark"
+                            role="button">CONTACTO</a>
+                        <a href="#up" class="btn btn-light active ms-5 " role="button">Volver al inicio</a>
+                        <div>
+                            <img src="../img/Logo-rafa-brandez.png" width="300px">
 
-                            </div>
-                    </div>
+                        </div>
                 </div>
             </div>
         </div>
+    </div>
 
 </body>
 
