--- a/index.html
+++ b/index.html
@@ -66,26 +66,26 @@
     <div class="container mt-5">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="4000">
-                    <img src="./img/galeria-11.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="./img/galeria-11.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-12.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-12.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-2.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-21.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-21.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-35.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-35.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-25.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-25.jpg" class="d-block w-100 img-fluid" >
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./img/galeria-29.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="./img/galeria-29.jpg" class="d-block w-100 img-fluid">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -123,7 +123,7 @@
                     principal y un postre. Ven a disfrutar del mejor producto con la mejor calidad.</p>
                 <a href="./pages/menu.html" class="btn btn-dark active border border-dark" role="button">MENU
                     DIARIO</a>
-                    <hr class="mt-5">
+                <hr class="mt-5">
                 <h3 class="mt-5">DESCUBRE NUESTROS ARROCES</h3>
                 <p class="lead">Porque si algo nos define es la calidad de nuestros arroces. ¿Quién no sueña con una
                     paella de unos milímetros, con todo su sabor y el punto justo de socarrat? Un acierto seguro
@@ -169,8 +169,8 @@
 
                         <a href="./pages/athome.html" class="btn btn-dark active  border border-dark" role="button">A
                             DOMICILIO</a>
-                            <br><br>
-                            <hr class="mt-5">
+                        <br><br>
+                        <hr class="mt-5">
 
                 </div>
 
@@ -188,17 +188,17 @@
                     <div>
                         <h3 class="mt-5">VEN A VERNOS</h1>
                             <p class="lead">
-                                Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en nuestra
+                                Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en
+                                nuestra
                                 web. ¡Te esperamos!
                             </p>
-    
+
                             <a href="./pages/contact.html" class="btn btn-dark active  border border-dark"
                                 role="button">CONTACTO</a>
-                                <a href="#up" class="btn btn-light active ms-5 "
-                                role="button">Volver al inicio</a>
+                            <a href="#up" class="btn btn-light active ms-5 " role="button">Volver al inicio</a>
                             <div>
                                 <img src="./img/Logo-rafa-brandez.png" width="300px">
-                                
+
                             </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 
     </div>
     </div>
-   
+
 </body>
 
 </html>
