--- a/pages/athome.html
+++ b/pages/athome.html
@@ -33,7 +33,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="up" class="nav-link white" href="../index.html">HOME</a>
+                                    <a  class="nav-link white" href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link white" href="./aboutus.html">SOBRE
@@ -43,7 +43,7 @@
                                     <a class="nav-link white" href="./menu.html">CARTA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active white" aria-current="page" href="./athome.html">A
+                                    <a id="up" class="nav-link active white" aria-current="page" href="./athome.html">A
                                         DOMICILIO</a>
                                 </li>
                                 <li class="nav-item">
@@ -109,15 +109,17 @@
             </div>
         </div>
     </div>
-
+    <!-- Img -->
     <div class="container mt-5">
         <div class="row">
-            <!-- Img -->
+
             <div class="col-12">
                 <div class="d-flex justify-content-center">
                     <img class="img-fluid" src="../img/a-domicilio.jpg">
                 </div>
             </div>
+        </div>
+    </div>
     <!-- Footer -->
     <div class="container">
         <div class="row">
