--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -33,10 +33,10 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="up" class="nav-link white" href="../index.html">HOME</a>
+                                    <a  class="nav-link white" href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active white" aria-current="page" href="./aboutus.html">SOBRE
+                                    <a id="up" class="nav-link active white" aria-current="page" href="./aboutus.html">SOBRE
                                         NOSOTROS</a>
                                 </li>
                                 <li class="nav-item">
