--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +13,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
+    <!-- Navbar -->
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid" id="bcg">
-                        <a class="navbar-brand" href="#">Navbar</a>
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg ">
+                    <div class="container-fluid" id="navbar">
+                        <a class="navbar-brand" href="#"><img src="../img/Logo-rafa-brandez.png" width="100px"
+                                alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -28,33 +33,100 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="aqui" class="nav-link" 
-                                        href="../index.html">HOME</a>
+                                    <a  class="nav-link white" href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./aboutus.html">SOBRE NOSOTROS</a>
+                                    <a class="nav-link white" href="./aboutus.html">SOBRE
+                                        NOSOTROS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./menu.html">CARTA</a>
+                                    <a class="nav-link white" href="./menu.html">CARTA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./athome.html">A DOMICILIO</a>
+                                    <a class="nav-link white" href="./athome.html">A
+                                        DOMICILIO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./contact.html">CONTACTO</a>
+                                    <a id="up" class="nav-link active white" aria-current="page"
+                                        href="./contact.html">CONTACTO</a>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
                 </nav>
             </div>
-            <div class="col-2">
-                <a href="#aqui" class="btn btn-success active mt-2 border border-success" role="button" data-bs-toggle="button"
-                    aria-pressed="true">RESERVAR</a>
+            <div class="col-12">
+                <hr>
             </div>
         </div>
     </div>
-    
+    <!-- Information -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <div class="d-flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
+                        class="bi bi-telephone mt-1 me-3" viewBox="0 0 16 16">
+                        <path
+                            d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                    </svg>
+                    <p>963 714 506</p>
+
+                </div>
+                <div class="d-flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
+                        class="bi bi-geo-alt mt-1 me-3" viewBox="0 0 16 16">
+                        <path
+                            d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                    </svg>
+                    <p>Avenida de Aragón, 16, 46021 Valencia</p>
+                </div>
+                <div class="d-flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-whatsapp mt-1 me-3" viewBox="0 0 16 16">
+                        <path
+                            d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+                    </svg>
+                    <p>644 345 232</p>
+                </div>
+            </div>
+
+
+            <div class="col-12 col-lg-6">
+                <div class="map-responsive">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.982099675028!2d-0.3581853!3d39.4697331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6048be7ce83f99%3A0x2c60a9ffe33eb8d0!2sAv.%20Arag%C3%B3n%2C%2016%2C%2046021%20Valencia!5e0!3m2!1ses!2ses!4v1664631973877!5m2!1ses!2ses"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer -->
+    <div class="container">
+        <div class="row">
+            <hr class="mt-5">
+            <div class="col-12 text-center">
+                <div>
+                    <h3 class="mt-5">VEN A VERNOS</h1>
+                        <p class="lead">
+                            Ven a disfrutar de nuestros menús diarios o el menú de noches haciendo tu reserva en
+                            nuestra
+                            web. ¡Te esperamos!
+                        </p>
+
+                        <a href="#" class="btn btn-dark active  border border-dark"
+                            role="button">CONTACTO</a>
+                        <a href="#up" class="btn btn-light active ms-5 " role="button">Volver al inicio</a>
+                        <div>
+                            <img src="../img/Logo-rafa-brandez.png" width="300px">
+
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
