--- a/pages/menu.html
+++ b/pages/menu.html
@@ -33,14 +33,14 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a id="up" class="nav-link white" href="../index.html">HOME</a>
+                                    <a  class="nav-link white" href="../index.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link white" href="./aboutus.html">SOBRE
                                         NOSOTROS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active white" aria-current="page" href="./menu.html">CARTA</a>
+                                    <a id="up" class="nav-link active white" aria-current="page" href="./menu.html">CARTA</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link white" href="./athome.html">A DOMICILIO</a>
